<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.mfrankic.sketchid.CustomDialogPreference
        android:dialogTitle="Reset User Progress"
        android:icon="@android:drawable/ic_menu_revert"
        android:key="@string/key_reset_user_progress"
        android:summary="Some settings are disabled because some users haven't finished their drawing sessions"
        android:title="Reset User Progress" />

    <PreferenceCategory
        android:key="@string/key_user_settings"
        android:title="User Settings">

        <ListPreference
            android:dialogTitle="Choose a user"
            android:icon="@android:drawable/ic_menu_more"
            android:key="@string/key_selected_user"
            android:summary="Select user from the list"
            android:title="Select User" />

        <EditTextPreference
            android:dialogTitle="Enter New User Name"
            android:icon="@android:drawable/ic_menu_add"
            android:key="@string/key_new_user"
            android:summary="Enter a name to create a new user"
            android:title="Create New User" />

        <com.mfrankic.sketchid.CustomDialogPreference
            android:dialogTitle="Delete User"
            android:icon="@android:drawable/ic_menu_delete"
            android:key="@string/key_delete_user"
            android:summary="Delete current user"
            android:title="Delete User" />

        <Preference
            android:icon="@android:drawable/ic_menu_set_as"
            android:key="@string/key_export_data"
            android:summary="Export user data to CSV file"
            android:title="Export Data" />

        <Preference
            android:icon="@android:drawable/ic_menu_upload"
            android:key="@string/key_upload_data"
            android:summary="Upload user data to Firebase"
            android:title="Upload Data" />

        <com.mfrankic.sketchid.CustomDialogPreference
            android:dialogTitle="Delete User Drawing Data"
            android:icon="@android:drawable/ic_menu_delete"
            android:key="@string/key_delete_user_data"
            android:summary="Delete all user drawing data from the database"
            android:title="Delete User Drawing Data" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/key_drawing_settings"
        android:title="Drawing Settings">

        <EditTextPreference
            android:dialogTitle="Enter Number of Drawing Attempts"
            android:icon="@android:drawable/ic_menu_day"
            android:key="@string/key_drawing_attempts"
            android:summary="Enter a number of drawing attempts"
            android:title="Number of Drawing Attempts" />

        <Preference
            android:icon="@android:drawable/ic_menu_gallery"
            android:key="@string/key_select_images"
            android:summary="Choose images for drawing"
            android:title="Select Drawing Images" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/key_data_management"
        android:title="Data Management">

        <Preference
            android:icon="@android:drawable/ic_menu_set_as"
            android:key="@string/key_export_all_data"
            android:summary="Export all users' data to CSV files"
            android:title="Export All Data" />

        <Preference
            android:icon="@android:drawable/ic_menu_upload"
            android:key="@string/key_upload_all_data"
            android:summary="Upload all users' data to Firebase"
            android:title="Upload All Data" />

        <com.mfrankic.sketchid.CustomDialogPreference
            android:dialogTitle="Clear All Drawing Data"
            android:icon="@android:drawable/ic_menu_delete"
            android:key="@string/key_clear_data"
            android:summary="Delete all drawing data from the database"
            android:title="Clear Drawing Data" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
