<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawing_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/reference_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginVertical="16dp"
        android:contentDescription="@string/reference_image"
        android:src="@drawable/baseline_image_24"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@+id/drawing_activity"
        app:tint="@color/onSurface" />

    <TextView
        android:id="@+id/attempt_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:gravity="center"
        android:textColor="@color/onSurface"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/drawing_frame"
        app:layout_constraintTop_toBottomOf="@id/reference_image" />

    <FrameLayout
        android:id="@+id/drawing_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/surface"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_buttons"
        app:layout_constraintEnd_toEndOf="@id/drawing_activity"
        app:layout_constraintStart_toStartOf="@id/drawing_activity"
        app:layout_constraintTop_toBottomOf="@id/reference_image">

        <com.mfrankic.sketchid.CustomDrawingView
            android:id="@+id/drawing_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/bottom_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/drawing_activity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary"
                android:text="@string/clear_canvas"
                android:textColor="@color/onPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btn_next_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary"
                android:text="@string/next_image"
                android:textColor="@color/onPrimary" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
